# ForgeData

./: LICENSE  MANIFEST.in  README.md  setup.cfg
forgedata/: countries.csv  domains-common.csv  firstname-female.csv  firstname-male.csv  generator.py  lastname.csv
forgedata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
