[metadata]
name = forgedata
version = 1.0.0
author = Soumit Das
author_email = its.soumit.das@gmail.com
description = A Python package for generating random dummy data for testing purposes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ITSSOUMIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = pandas
packages = find:
python_requires = >=3.7
include_package_data = True